# sw4-sound-module

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README
dsp/: FilterAdapters.cpp  FilterAdapters.h  OneThirdOctaveBand.cpp  OneThirdOctaveBand.h  TonalAndBroadbandNoise.cpp  TonalAndBroadbandNoise.h
dsp/stk_partial/: RtAudio.h  Stk.h
gtests/: CMakeLists.txt  testCompressorNoise.cpp  testLoadingNoise.cpp  testOneThirdOctaveBand.cpp  testPressureCalculator.cpp
helicopter/: BladeElementMomentumTheory.cpp  BladeElementMomentumTheory.h  CMakeLists.txt  CompressorNoise.cpp  CompressorNoise.h  GearboxNoise.cpp  GearboxNoise.h  RotationalNoise.cpp  RotationalNoise.h  SourceNoise.cpp  SourceNoise.h  compressor_noise.cpp  gearbox_noise.cpp  helicopter_noise.cpp  rotational_noise.cpp
tests/: CMakeLists.txt  amplitude_modulation.cpp  biquad_filter.cpp  create_filter_data.cpp  fft_decompositions.cpp  filter_tester.cpp  read_wav_file.cpp
